--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "echarts": "^4.0.0",
+    "less-loader": "^7.0.0",
+    "lib-flexible": "^0.3.2",
+    "postcss": "^8.0.0",
+    "vant": "^2.12.51",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -15,6 +21,10 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.0",
     "@vue/cli-service": "^5.0.0",
+    "babel-plugin-import": "^1.13.5",
+    "less": "^4.1.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
